# Robotics

src/Trab1/tr5_description/: package.xml
src/Trab1/tr5_description/launch/: tr5_basic_test.launch
src/Trab1/tr5_description/urdf/: tr5_basic.urdf.xacro
src/Trab2/t4_package/tr5_control/: CMakeLists.txt  package.xml
src/Trab2/t4_package/tr5_control/config/: hardware_controllers.yaml
src/Trab2/t4_package/tr5_control/include/: tr5_communication.h  tr5_control.h  tr5_hardware_interface.h  tr5_interface.h
src/Trab2/t4_package/tr5_control/launch/: tr5_hardware.launch
src/Trab2/t4_package/tr5_control/src/: tr5_comm_node.cpp  tr5_communication.cpp  tr5_control.cpp  tr5_hardware_interface.cpp
src/Trab2/t4_package/tr5_description/launch/: tr5_test.launch  tr5_test_kinematics.launch  tr5_upload.launch
src/Trab2/t4_package/tr5_description/rviz/: TR5.rviz
src/Trab2/t4_package/tr5_description/urdf/: tr5.urdf.old.xacro  tr5.urdf.xacro  tr5_robot.urdf.xacro  tr5_robot_kinematics.urdf.xacro
src/Trab2/t4_package/tr5_drivers/: CMakeLists.txt  package.xml
src/Trab2/t4_package/tr5_drivers/share/: setup-udev.sh
src/Trab2/t4_package/tr5_drivers/share/udev/: 99-tr5.rules
src/Trab2/t4_package/tr5_kinematics/: CMakeLists.txt  package.xml
src/Trab2/t4_package/tr5_kinematics/include/tr5_kinematics/: Kinematics.hpp
src/Trab2/t4_package/tr5_kinematics/src/: Kinematics.cpp  tr5_kinematics_node.cpp
src/Trab2/t4_package/tr5_kinematics/srv/: DoForwardKinematic.srv  DoInverseKinematic.srv
src/Trab2/t4_package/tr5_robot_controller/: CMakeLists.txt  package.xml
src/Trab2/t4_package/tr5_robot_controller/include/tr5_robot_controller/: Controller.hpp
src/Trab2/t4_package/tr5_robot_controller/launch/: tr5_kinematics_test.launch
src/Trab2/t4_package/tr5_robot_controller/src/: Controller.cpp  tr5_robot_controller_node.cpp
src/Trab2/t4_package/tr5_robot_controller/srv/: KinematicMode.srv
src/TrabFinal/nxt/line_detector/: CMakeLists.txt  package.xml
src/TrabFinal/nxt/line_detector/include/line_detector/: LineDetector.hpp
src/TrabFinal/nxt/line_detector/src/: LineDetector.cpp  LineDetector_node.cpp
src/TrabFinal/nxt/magnetic_detector/: CMakeLists.txt  package.xml
src/TrabFinal/nxt/magnetic_detector/include/magnetic_detector/: MagneticDetector.hpp
src/TrabFinal/nxt/magnetic_detector/src/: MagneticDetector.cpp  MagneticDetector_node.cpp
src/TrabFinal/nxt/motor_controller/: CMakeLists.txt  package.xml
src/TrabFinal/nxt/motor_controller/include/motor_controller/: MotorController.hpp
src/TrabFinal/nxt/motor_controller/src/: MotorController.cpp  MotorController_node.cpp
src/TrabFinal/nxt/nxt_maze_solver/: CMakeLists.txt  package.xml
src/TrabFinal/nxt/nxt_maze_solver/include/nxt_maze_solver/: MazeSolver.hpp
src/TrabFinal/nxt/nxt_maze_solver/launch/: nxt_bringup.launch  nxt_bringup.launch~  nxt_maze_solver.launch  nxt_maze_solver.launch~
src/TrabFinal/nxt/nxt_maze_solver/rviz/: rviz_nxt.rviz
src/TrabFinal/nxt/nxt_maze_solver/src/: MazeSolver.cpp  MazeSolver_node.cpp
src/TrabFinal/nxt/obstacle_detector/: CMakeLists.txt  package.xml
src/TrabFinal/nxt/obstacle_detector/include/obstacle_detector/: ObstacleDetector.hpp
src/TrabFinal/nxt/obstacle_detector/src/: ObstacleDetector.cpp  ObstacleDetector_node.cpp
