<?xml version="1.0"?>
<package>
  <name>tr5_control</name>
  <version>0.0.0</version>
  <description>The tr5_control package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="francisco@todo.todo">francisco</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>serial</build_depend>

  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>baxter_description</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_visual_tools</run_depend>
  <run_depend>serial</run_depend>




  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>