<?xml version="1.0"?>
<package>
  <name>motor_controller</name>
  <version>0.0.0</version>
  <description>The motor_controller package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="duarteg@todo.todo">duarteg</maintainer>


    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>geometry_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>geometry_msgs</run_depend>
    
    <!-- The export tag contains other, unspecified, tags -->
    <export>
    </export>

    </package>
